Se agrega la entidad ciudad al api
